--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
-    "mongoose": "^5.2.7"
+    "mongoose": "^5.2.7",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
