--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cookie-session": "^2.0.0-beta.3",
-    "express": "^4.16.3",
-    "express-graphql": "^0.6.12",
-    "graphql": "^0.13.2",
-    "mongoose": "^5.2.7",
-    "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "jest --watch"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"cookie-session": "^2.0.0-beta.3",
+		"express": "^4.16.3",
+		"express-graphql": "^0.6.12",
+		"graphql": "^0.13.2",
+		"mongoose": "^5.2.7",
+		"passport": "^0.4.0",
+		"passport-google-oauth20": "^1.0.0"
+	}
 }
