--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,15 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest --watch"
+		"start": "node server.js",
+		"server": "nodemon server.js",
+		"client": "npm run start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\""
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"concurrently": "^3.6.1",
 		"cookie-session": "^2.0.0-beta.3",
 		"express": "^4.16.3",
 		"express-graphql": "^0.6.12",
